fix fontFamily, content align center

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -5,7 +5,9 @@
 */
 
 * {
-  font-family: 'Kumbh Sans';
+  font-family: 'Kumbh Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+  'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji';
 }
 
  /* 滚动条样式 */
